# effi-mail

./: .gitignore  .gitmodules  IMPLEMENTATION_SUMMARY.md  Norton R&D Services Agreement (DRAFT) - HJ9.docx  Norton R&D Services Agreement (DRAFT) - HJ9_mammoth.md  Norton R&D Services Agreement (DRAFT) - HJ9_pandoc.md  Norton R&D Services Agreement (DRAFT) - HJ9_python_docx.md  README.md  add_dsa_comments.py  add_dsa_comments2.py  analyze_emails.py  batch_update_emails.py  batch_update_emails_2.py  check_attachments.py  check_lamplight_dates.py  create_pdx_dsa.py  database.py  debug_inbox.py  docx_to_markdown.py  domain_categories.json  domain_categories.py  effi_mail.db  effi_work_client.py  find_email.py  fix_numbering.py  mcp_server.py  migrate_domains.py  models.py  outlook_client.py  outlook_recent_emails.py  pyproject.toml  query_db.py  read_domain_emails.py  recent_emails_to_restore.json  sent_to_domain.py  test_date_format.py
.github/: agents_delegation.md  agents_document_editing.md  agents_legal_context.md  agents_task_management.md
Norton R&D Services Agreement (DRAFT) - HJ9/: Norton R&D Services Agreement (DRAFT) - HJ9.md  blocks.jsonl  index.json  manifest.json  relationships.json  sections.json  styles.json  tag_ranges.jsonl
docs/: DEVELOPER_GUIDE.md  DOCSTRING_TRIMMING_GUIDE.md  TODO.md
effi_mail/: __init__.py  config.py  helpers.py  ingest.md  main.py  testing.py
outlook_client/: __init__.py  base.py  dms.py  folders.py  retrieval.py  search.py  triage.py
scripts/: README.md  __init__.py  archive_marketing_emails.py  check_lamplight_dates.py  (+15 more)
(+58 files in other folders)
