[project]
name = "effi-mail"
version = "0.1.0"
description = "MCP server for Outlook email management with triage workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pywin32>=306",
]

[project.scripts]
effi-mail = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
